--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,6 +10,10 @@
   box-sizing: border-box;
 }
 
+body {
+  user-select: none;
+}
+
 a {
   text-decoration: none;
   color: black;
@@ -26,11 +30,20 @@ a {
 }
 
 @import "./admin-styles/mixin";
+
 @import "./admin-styles/dashboard";
 @import "./admin-styles/products";
 @import "./admin-styles/chart";
 @import "./admin-styles/dashboardapp";
 @import "./admin-styles/mediaquery";
+
+// .header {
+//   @include flex(row, flex-end, stretch, 1.2 rem);
+
+//   a {
+//     color: $color2;
+//   }
+// }
 
 .admin-container {
   @include grid(1fr 4fr, 2rem);
