Added Few New Changes

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -19,6 +19,10 @@ a {
   color: black;
 }
 
+$color1: white;
+$color2: rgb(46, 46, 46);
+$color3: rgb(0, 104, 136);
+
 .red {
   color: red;
 }
@@ -37,13 +41,46 @@ a {
 @import "./admin-styles/dashboardapp";
 @import "./admin-styles/mediaquery";
 
-// .header {
-//   @include flex(row, flex-end, stretch, 1.2 rem);
+.header {
+  @include flex(row, flex-end, stretch, 1.2 rem);
 
-//   a {
-//     color: $color2;
-//   }
-// }
+  padding: 1 rem;
+
+  a {
+    color: $color2;
+    letter-spacing: 2px;
+    font-size: 1.2 rem;
+
+    &:hover {
+      color: $color3;
+    }
+  }
+
+  button {
+    border: none;
+    font-size: 1.2 rem;
+    cursor: pointer;
+    background-color: transparent;
+
+    &:hover {
+      color: $color3;
+    }
+  }
+
+  dialog {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    width: 100px;
+    position: absolute;
+    left: calc(100% - 100px);
+    top: 8%;
+
+    > div {
+      @include flex(column, flex-start, center, 0.25rem);
+    }
+  }
+}
 
 .admin-container {
   @include grid(1fr 4fr, 2rem);
